--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 egui = "0.30"
-eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland"] }
+eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
 log = "0.4"
 
 serde = { version = "1", features = ["derive"] }
