--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ rust_search_fork = "2.1.3"
 base64 = "0.22.1"
 open = "5.3.2"
 rfd = "0.15.2"
+directories = "6.0.0"
 
 [profile.release]
 opt-level = 2
